--- a/pm/app/templates/Default/default.latte
+++ b/pm/app/templates/Default/default.latte
@@ -6,6 +6,7 @@
 	<ul n:inner-foreach="$siteContent as $item">
 		<li n:ifset="$item->link" id="{$item->hash}">
 			{if $item->link=='content'}
+				<h2>{$item->title}</h2>
 				{!$item->content|texy}
 			{else}
 				{control $item->link}
