--- a/pm/app/templates/Menu/default.latte
+++ b/pm/app/templates/Menu/default.latte
@@ -2,4 +2,6 @@
 
 <h2 n:block="title">Správa položek menu</h2>
 
+<p>V této sekci je možné nastavit strukturu menu a jednotlivým položkám přidat vlastní nadpisy (po zaškrtnutí checkboxu 'použít vlastní nadpis'). Počet položek menu je pevně nastaven na maximálně 11. Obsah každé pozice se vybírá pomocí výběrového seznamu, s tím, že 'vlastní obsah' je univerzální sekce, která musí mít vlastní URI adresu a nadpis (a samozřejmě i obsah), tyto údaje se vyplňují jako další krok v sekci <a n:href="content:edit">upravit obsah</a>. Ostatní sekce mohou mít možnosti úprav také... najdete je v možnostech úprav v bočním sloupci (zobrazí se pouze autorizovanému administrátorovi). Pozice nemusí být vyplněné popořadě (uprostřed můžou být prázdná místa), ale v menu se skládají zvrchu bez mezer.</p>
+
 {control menuForm}
