--- a/pm/app/templates/News/add.latte
+++ b/pm/app/templates/News/add.latte
@@ -2,7 +2,7 @@
 
 <h2 n:block="title">Přidání novinky</h2>
 
-<p>Pokud chcete aby právě přidávaná novinka obsahovala i obrázky, musíte je napřed nahrát v <a n:href="multimedia:add">k tomu určené sekci multimedia</a>.</p>
+<p>Pokud chcete aby právě přidávaná novinka obsahovala i obrázky, musíte je napřed nahrát v <a n:href="multimedia:add">k tomu určené sekci multimedia</a>. Jako datum se použije aktuální datum vložení.</p>
 
 {control newsForm}
 
