--- a/pm/app/templates/News/edit.latte
+++ b/pm/app/templates/News/edit.latte
@@ -2,6 +2,8 @@
 
 <h2 n:block="title">Upravit novinku</h2>
 
+<p>Nyní můžete upravit obsah a nadpis zvolené novinky. Úpravy dokončíte stiskem tlačítka 'uložit'.</p>
+
 {control newsForm}
 
 {snippet content section}
